# femtoGPT

./: README.md  pyproject.toml
femtogpt/: loss.py  modules.py  train.py  utils.py  value.py
tests/: test_loss.py  test_modules.py  test_utils.py  test_value.py
